# PruebaTecnica-Option

./: Prueba.md  README.md  docker-compose.yml
.github/workflows/: integrate.yml
client/: .eslintrc.js  Dockerfile  index.html  package-lock.json  package.json  tsconfig.eslint.json  vite.config.ts
client/src/: App.test.tsx  App.tsx  main.tsx
client/src/api/: index.ts
client/src/components/context/: App.provider.tsx
client/src/components/elements/: AnimatedContainer.tsx  Counter.tsx  CustomLoader.tsx  ErrorAlert.tsx  Statistic.tsx
client/src/components/layouts/: Section.tsx
client/src/components/modules/: MonthlyIncome.test.tsx  MonthlyIncome.tsx  MonthlyServices.tsx  MostExpensiveServices.tsx
client/src/utils/: currency.ts
client/tests/: test-utils.ts
nginx/: default.conf
server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
server/app/: __init__.py  main.py  router.py  test_router.py
server/app/db/: Mantenciones.json  Servicios.json  Taxis.json  data_loader.py
